# neoRL-industrial-gym

./: .dockerignore  .editorconfig  .env.example  .env.template  .gitignore  .pre-commit-config.yaml  AUTONOMOUS_BACKLOG.md  AUTONOMOUS_ENHANCEMENT_ANALYSIS.md  AUTONOMOUS_IMPLEMENTATION_COMPLETE.md  AUTONOMOUS_SDLC_IMPLEMENTATION_FINAL.md  AUTONOMOUS_SDLC_SUCCESS.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE_RESEARCH.md  Dockerfile  ENHANCEMENT_SUMMARY.md  FINAL_IMPLEMENTATION_REPORT.md  Makefile  PRODUCTION_DEPLOYMENT_GUIDE.md  PROGRESSIVE_QUALITY_GATES_IMPLEMENTATION_SUMMARY.md  PROJECT_CHARTER.md  README.md  RESEARCH_IMPLEMENTATION_SUMMARY.md  RESEARCH_PAPER_ABSTRACTS.md  RESEARCH_PAPER_DRAFT.md  SDLC_IMPLEMENTATION_SUMMARY.md  SECURITY.md  TERRAGON_AUTONOMOUS_SDLC_FINAL_REPORT.md  TERRAGON_AUTONOMOUS_SDLC_IMPLEMENTATION.md  TERRAGON_AUTONOMOUS_SDLC_SUMMARY.md  TERRAGON_AUTONOMOUS_SDLC_V4_COMPLETE.md  TERRAGON_AUTONOMOUS_SDLC_V4_EXECUTION_COMPLETE.md  TERRAGON_AUTONOMOUS_SDLC_V4_FINAL_REPORT.md  docker-compose.prod.yml  docker-compose.yml  performance_benchmark.py  progressive_quality_gates.py  (+15 more)
.devcontainer/: Dockerfile  post-create.sh
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  safety_issue.yml  security_vulnerability.yml
.terragon/: autonomous_executor.py  config.yaml  cron_runner.sh  deploy_autonomous_sdlc.sh  monitor.py  value_discovery.py  value_discovery_simple.py
benchmarks/: performance_benchmarks.py
config/: config_loader.py
config/environments/: development.yaml  production.yaml  testing.yaml
docs/: ARCHITECTURE.md  BENCHMARKING.md  COMPLIANCE.md  DEPLOYMENT_GUIDE_COMPREHENSIVE.md  DEVELOPMENT.md  PROGRESSIVE_QUALITY_GATES.md  ROADMAP.md  SECURITY_POLICIES.md  SECURITY_SCANNING.md  index.md
docs/adr/: 0001-technology-stack-selection.md  0002-safety-first-design.md  0003-jax-implementation.md  README.md  adr-0001-offline-rl-framework.md  adr-template.md
docs/deployment/: docker_guide.md  docker_security.md
docs/guides/: README.md
docs/monitoring/: README.md  observability_guide.md
docs/testing/: README.md
docs/workflows/: SETUP_REQUIRED.md  ci-cd-setup.md  github-actions-comprehensive.md  github-actions-setup.md  troubleshooting.md
docs/workflows/examples/: ci.yml  industrial-compliance.yml  industrial-release.yml  security-scan.yml
examples/: advanced_research_demo.py  basic_usage.py
k8s/: deployment.yaml
monitoring/: alertmanager.yml  otel-config.yml  prometheus.yml
monitoring/rules/: neorl_industrial_rules.yml
nginx/: nginx.conf
scripts/: automation_manager.py  automation_orchestrator.py  benchmark_suite.py  build.sh  collect_metrics.py  container_security.py  generate_reports.py  generate_sbom.py  prepare_release.py  publish_release.py  release.sh  repository_maintenance.py  run_quality_gates_comprehensive.py  security_scan.py  validate_config.py  validate_safety.py
src/neorl_industrial/: __init__.py  _version.py  distributed.py  exceptions.py  security.py  utils.py  validation.py
src/neorl_industrial/agents/: __init__.py  autonomous_agent.py  base.py  cql.py  ensemble.py  iql.py  networks.py  safety_critical.py  td3bc.py
src/neorl_industrial/benchmarks/: __init__.py  baseline_agents.py  industrial_benchmarks.py  research_metrics.py  statistical_analysis.py
src/neorl_industrial/compliance/: gdpr_compliance.py  international_standards.py
src/neorl_industrial/config/: __init__.py  defaults.py
src/neorl_industrial/core/: __init__.py  types.py
src/neorl_industrial/environments/: __init__.py  advanced_chemical_reactor.py  advanced_power_grid.py  base.py  chemical_reactor.py  power_grid.py  robot_assembly.py
src/neorl_industrial/experiments/: research_validation.py
src/neorl_industrial/health/: __init__.py  health_checker.py  metrics_collector.py
src/neorl_industrial/i18n/: localization.py
src/neorl_industrial/integrations/: industry_connectors.py
src/neorl_industrial/monitoring/: __init__.py  alerting.py  dashboard.py  logger.py  performance.py
src/neorl_industrial/optimization/: __init__.py  adaptive_caching.py  auto_tuning.py  caching.py  distributed_computing.py  distributed_training.py  intelligent_caching.py  memory_optimization.py  performance.py  quantum_accelerated_training.py  quantum_neural_optimization.py
src/neorl_industrial/quality_gates/: __init__.py  adaptive_gates.py  gate_executor.py  progressive_monitor.py  quality_metrics.py  real_time_monitor.py
src/neorl_industrial/research/: __init__.py  autonomous_intelligence.py  breakthrough_algorithms.py  continual_learning.py  distributed_training.py  foundation_models.py  meta_learning.py  neural_architecture_search.py  novel_algorithms.py  quantum_inspired_algorithms.py  research_accelerator.py
src/neorl_industrial/resilience/: __init__.py  advanced_circuit_breaker.py  circuit_breaker.py  circuit_breaker_enhanced.py  error_recovery.py  fallback_manager.py  retry_handler.py
src/neorl_industrial/security/: __init__.py  advanced_security_monitor.py  security_framework.py  security_monitor.py
src/neorl_industrial/validation/: __init__.py  comprehensive_validator.py  input_validator.py
tests/: __init__.py  conftest.py  test_basic.py  test_comprehensive_system.py  test_research_integration.py  test_testing_infrastructure.py
tests/contracts/: conftest.py
tests/e2e/: __init__.py
tests/fixtures/: __init__.py  industrial_data.py
tests/integration/: __init__.py  test_environment_integration.py
tests/performance/: __init__.py  conftest.py  test_benchmarks.py
tests/unit/: __init__.py  test_safety_constraints.py
